--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
             <p class="section-subtitle">ผลงานของผม</p>
             <div class="projects-grid">
                 <div class="project-card">
-                    <a href="https://youtu.be/NPnqTFFeI0o?si=JcSQxMzSDu-IbjYy" target="_blank" rel="noopener"
+                    <a href="https://youtu.be/YO9uCPMsPuA?si=N0HW4ZrNiLsw8anv" target="_blank" rel="noopener"
                         class="project-image">
-                        <img src="https://img.youtube.com/vi/NPnqTFFeI0o/maxresdefault.jpg"
+                        <img src="https://img.youtube.com/vi/YO9uCPMsPuA/maxresdefault.jpg"
                             alt="Xivex – Fashion E-commerce Platform" class="project-thumbnail" loading="lazy"
                             width="600" height="338">
                         <div class="project-play-btn">▶</div>
@@ -195,7 +195,7 @@
                             <span class="tag">HTML/CSS</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://youtu.be/NPnqTFFeI0o?si=JcSQxMzSDu-IbjYy" target="_blank" rel="noopener"
+                            <a href="https://youtu.be/YO9uCPMsPuA?si=N0HW4ZrNiLsw8anv" target="_blank" rel="noopener"
                                 class="project-link">🎬 ดูคลิปนำเสนอ</a>
                             <a href="https://github.com/pratchayawutthansri-commits" target="_blank" rel="noopener"
                                 class="project-link">📁 GitHub</a>
